# llama_extract

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_package.yml  lint.yml  publish_release.yml  unit_test.yml
examples/: demo_analysis.ipynb  demo_basic.ipynb  demo_existent_schema.ipynb  demo_json_schema.ipynb  demo_manual.ipynb  demo_pydantic_model.ipynb  resume_screening.ipynb
examples/rag/: rag_metadata.ipynb
llama_extract/: __init__.py  base.py  extract.py  utils.py
tests/: test_benchmark.py  test_extract.py  test_extract_api.py  test_extract_e2e.py  util.py
tests/data/receipt/: noisebridge_receipt.test.json  schema.json
tests/data/resume/: schema.json  software_architect_resume.html  software_architect_resume.test.json
tests/data/slide/: saas_slide.test.json  schema.json
